240510_0056 Improved web scraping code